created index.html structure and added image resources

--- a/public/views/login.html
+++ b/public/views/login.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>chorded</title>
-        <link rel="stylesheet" type="text/css" href="public/css/style.css">
+        <link rel="stylesheet" type="text/css" href="public/css/login.css">
         <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
         <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
         <!-- <script src="script.js"></script>  -->
@@ -12,12 +12,11 @@
             <header>
                 <p id="chorded">Chorded</p>
                 <!-- <img /> -->
-                <img src="public/img/profile.svg" id="profile_button"/>
+                <!-- <img /> -->
             </header>
 
-            <div id="search_container">
-                <div id="search_bar_artist"></div>
-                <div id="search_bar_song_title"></div>
+            <div id="login_container">
+                
             </div>
         </div>
 
