--- a/public/views/index.html
+++ b/public/views/index.html
@@ -3,22 +3,24 @@
     <head>
         <title>chorded</title>
         <link rel="stylesheet" type="text/css" href="public/css/style.css">
-        <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
-        <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
-        <!-- <script src="script.js"></script>  -->
+        
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet"> 
     </head>
     <body>
         <div id="base_container">
-            <header>
-                <p id="chorded">Chorded</p>
+            <div id="header">
                 <!-- <img /> -->
-                <img src="public/img/profile.svg" id="profile_button"/>
-            </header>
-
-            <div id="search_container">
-                <div id="search_bar_artist"></div>
-                <div id="search_bar_song_title"></div>
             </div>
+            <img src="public/img/profile.svg" id="profile_button"/>
+            <p id="chorded">Chorded</p>
+                <!-- <img /> -->
+
+            <form id="search_container">
+                <input name="Artist name" type="text" id="search_bar_artist" placeholder="Artist name">
+                <input name="Song title" type="text" id="search_bar_song_title" placeholder="Song title">
+            </form>
         </div>
 
     </body>
