--- a/public/views/login.html
+++ b/public/views/login.html
@@ -2,22 +2,28 @@
 <html>
     <head>
         <title>chorded</title>
-        <link rel="stylesheet" type="text/css" href="public/css/login.css">
+        <link rel="stylesheet" type="text/css" href="public/css/style.css">
         <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
         <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
         <!-- <script src="script.js"></script>  -->
+
+            <!-- Required styles for Material Web -->
+            <link rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
+            <!-- Required Material Web JavaScript library -->
+            <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+            <!-- Instantiate single textfield component rendered in the document -->
+            <script>
+            mdc.textField.MDCTextField.attachTo(document.querySelector('.mdc-text-field'));
+            </script>
     </head>
     <body>
         <div id="base_container">
-            <header>
-                <p id="chorded">Chorded</p>
-                <!-- <img /> -->
-                <!-- <img /> -->
-            </header>
-
-            <div id="login_container">
-                
-            </div>
+            <label class="mdc-text-field mdc-text-field--filled">
+                <span class="mdc-text-field__ripple"></span>
+                <input type="text" class="mdc-text-field__input" aria-labelledby="my-label">
+                <span class="mdc-floating-label" id="my-label">Label</span>
+                <span class="mdc-line-ripple"></span>
+              </label>
         </div>
 
     </body>
