--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,7 @@
     align-items: center;
     text-align: center;
     position: absolute;
+    justify-content: center;
 }
 
 #chorded {
@@ -21,6 +22,8 @@
     text-align: center;
     margin-top: 10%;
 }
+
+/*  -----------------------------------------    INDEX SCREEN   ---------------------------------   */
 
 #profile_button {
     float: right;
@@ -65,4 +68,72 @@ input[type="text"]
     border: none;
     border-bottom: 1px solid #BB86FC;
     margin: 1%;
+}
+
+/*  --------------------------------------------- LOGIN SCREEN ----------------------------------   */
+
+#login_container {
+    background: #2f2f2f 0% 0% no-repeat padding-box;
+    border: 1px solid #707070;
+    width: 50%;
+    height: 60%;
+    text-align: center;
+    align-items: center;
+    margin: 0 auto;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+
+#login {
+    text-align: center;
+    font-family: 'Roboto Light', sans-serif;
+    font: normal normal 300 60px/72px Roboto;
+    letter-spacing: -0.48px;
+    color: #FFFFFFDE;
+    margin: 6% 0 2% 0;
+}
+
+#login_form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 60%;
+    float: inherit;
+    width: 50%;
+}
+
+.email {
+    background: #FFFFFF1F 0% 0% no-repeat padding-box;
+    border-radius: 4px 4px 0px 0px;
+    padding: 0.5em;
+    border: 1px solid #BB86FC;
+    margin: 2%;
+}
+
+.password {
+    background: #FFFFFF0A 0% 0% no-repeat padding-box;
+    border-radius: 4px 4px 0px 0px;
+    padding: 0.5em;
+    border: 1px solid #BB86FC;
+    margin: 2%;
+}
+
+#login_buttons {
+    display: flex;
+    flex-direction: row;
+    width: 45%;
+    margin: 2% 27.5% 6% 27.5%;
+    justify-content: space-between;
+}
+
+.button {
+    background: #BB86FCD4 0% 0% no-repeat padding-box;
+    border: 1px solid #707070;
+    border-radius: 19px;
+    text-align: center;
+    padding: 0.6em 1em 0.6em 1em;
+    font: normal normal normal 30px/16px Calibri;
+    letter-spacing: 1px;
+    color: #000000;
 }
