--- a/public/css/style.css
+++ b/public/css/style.css
@@ -77,6 +77,7 @@ input[type="text"]
     border: 1px solid #707070;
     width: 50%;
     height: 60%;
+    box-shadow: 2px 6px 10px 6px #00000040;
     text-align: center;
     align-items: center;
     margin: 0 auto;
@@ -117,6 +118,10 @@ input[type="text"]
     padding: 0.5em;
     border: 1px solid #BB86FC;
     margin: 2%;
+    background-image: url(../img/password.svg);
+    background-position: 97% 50%;
+    background-repeat: no-repeat;
+    background-size: 8%;
 }
 
 #login_buttons {
@@ -132,7 +137,8 @@ input[type="text"]
     border: 1px solid #707070;
     border-radius: 19px;
     text-align: center;
-    padding: 0.6em 1em 0.6em 1em;
+    padding: 0.6em 0 0.6em 0;
+    width: 35%;
     font: normal normal normal 30px/16px Calibri;
     letter-spacing: 1px;
     color: #000000;
