--- a/public/views/login.html
+++ b/public/views/login.html
@@ -14,10 +14,15 @@
                 <form id="login_form">
                     <input name="Email" type="text" class="email" placeholder="Email">
                     <input name="Password" type="text" class="password" placeholder="Password">
+                    <!-- <input name="Repeat_password" type="text" class="password" placeholder="Repeat password"> -->
                 </form>
                 <div id="login_buttons">
                     <button name="register" class="button">Register</button>
                     <button name="login" class="button">Log in</button>
+                </div>
+                <div id="login_buttons" style="visibility:collapse;">
+                    <button name="login" class="button">Log in</button>
+                    <button name="register" class="button">Register</button>
                 </div>
             </div>
         </div>
