added results screen and its styles

--- a/public/views/login.html
+++ b/public/views/login.html
@@ -14,7 +14,7 @@
                 <form id="login_form">
                     <input name="Email" type="text" class="email" placeholder="Email">
                     <input name="Password" type="text" class="password" placeholder="Password">
-                    <!-- <input name="Repeat_password" type="text" class="password" placeholder="Repeat password"> -->
+                    <input name="Repeat_password" type="text" class="password" placeholder="Repeat password" style="display: none;">
                 </form>
                 <div id="login_buttons">
                     <button name="register" class="button">Register</button>
