--- a/public/css/style.css
+++ b/public/css/style.css
@@ -143,3 +143,107 @@ input[type="text"]
     letter-spacing: 1px;
     color: #000000;
 }
+
+/*  --------------------------------------------- RESULTS SCREEN ----------------------------------   */
+
+#header {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    position: relative;
+    padding-top: 1%;
+}
+
+#header_buttons_container {
+    width: 30%;
+    justify-content: space-evenly;
+    display: flex;
+    flex-direction: row;
+    padding: 1%;
+    position: relative;
+}
+
+#search_button {
+    float: right;
+    margin: 2% 5% auto;
+}
+
+#song_info {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    height: 25%;
+    margin-top: 2%;
+}
+
+#song_picture {
+    height: 100%;
+    float: right;
+}
+
+/* ---------------------------------- */
+
+#song_info_details {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 45%;
+}
+
+#song_info_details p {
+    margin-left: 15%;
+}
+
+#song_title {
+    text-align:left;
+    font-family: 'Roboto Light', sans-serif;
+    font: normal normal 300 96px/112px Roboto;
+    letter-spacing: -1.44px;
+    color: #FFFFFFDE;
+}
+
+#song_key {
+    text-align: left;
+    font-family: 'Roboto Light', sans-serif;
+    font: normal normal normal 34px/36px Roboto;
+    letter-spacing: 0px;
+    color: #FFFFFFDE;
+}
+
+#song_tempo {
+    text-align: left;
+    font-family: 'Roboto Light', sans-serif;
+    font: normal normal normal 24px/24px Roboto;
+    letter-spacing: 0.18px;
+    color: #FFFFFFDE;
+}
+
+/* ---------------------------------- */
+
+#song_tags {
+    width: 27.5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+#song_tags .song_tag {
+    float: left;
+}
+
+.song_tag {
+    width: 40%;
+    margin-left: 4%;
+    background: #FFFFFF1F 0% 0% no-repeat padding-box;
+    border: 1px solid #BB86FCC4;
+    border-radius: 16px;
+}
+
+.song_tag p {
+    font-family: 'Roboto Light', sans-serif;
+    font: normal normal normal 20px/20px Roboto;
+    letter-spacing: 0.36px;
+    color: #BB86FCDE;
+    line-height: 3em;
+}
