--- a/public/css/style.css
+++ b/public/css/style.css
@@ -175,6 +175,7 @@ input[type="text"]
     justify-content: center;
     height: 25%;
     margin-top: 2%;
+    margin-bottom: 2.5%;
 }
 
 #song_picture {
@@ -246,4 +247,42 @@ input[type="text"]
     letter-spacing: 0.36px;
     color: #BB86FCDE;
     line-height: 3em;
+}
+
+/* ---------------------------------- */
+
+#results_container {
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+}
+
+.results_item {
+    display: flex;
+    flex-direction: column;
+    margin-top: 2%;
+    margin-left: 4%;
+}
+
+.song_element {
+    font: normal normal normal 24px/24px Roboto;
+    letter-spacing: 0.18px;
+    color: #FFFFFFDE;
+    text-align: left;
+}
+
+.song_chords {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.song_chords p {
+    text-align: left;
+    font: normal normal normal 48px/56px Roboto;
+    letter-spacing: 0px;
+    color: #FFFFFFDE;
+    margin: 2%;
+    opacity: 0.7;
 }
