--- a/public/views/results.html
+++ b/public/views/results.html
@@ -39,6 +39,33 @@
                     </div>
                 </div>
             </div>
+            <div id="results_container">
+                <div class="results_item">
+                    <p class="song_element">Intro</p>
+                    <div class="song_chords">
+                        <p>B♭</p>
+                        <p>B♭maj7/A</p>
+                        <p>B♭</p>
+                        <p>B♭maj7/A</p>
+                        <p>D7/A</p>
+                    </div>
+                </div>
+                <div class="results_item">
+                    <p class="song_element">Intro</p>
+                    <div class="song_chords">
+                        <p>B♭</p>
+                        <p>B♭maj7/A</p>
+                        <p>B♭</p>
+                        <p>B♭maj7/A</p>
+                        <p>D7/A</p>
+                        <p>B♭</p>
+                        <p>B♭maj7/A</p>
+                        <p>B♭</p>
+                        <p>B♭maj7/A</p>
+                        <p>D7/A</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
