--- a/public/views/index.html
+++ b/public/views/index.html
@@ -3,7 +3,8 @@
     <head>
         <title>chorded</title>
         <link rel="stylesheet" type="text/css" href="public/css/style.css">
-        
+        <script src="public/script/script.js"></script>
+
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet"> 
