--- a/public/views/login.html
+++ b/public/views/login.html
@@ -3,6 +3,8 @@
     <head>
         <title>chorded</title>
         <link rel="stylesheet" type="text/css" href="public/css/style.css">
+        <script src="public/script/script.js"></script>
+        
         <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
         <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
     </head>
