--- a/public/views/login.html
+++ b/public/views/login.html
@@ -4,7 +4,7 @@
         <title>chorded</title>
         <link rel="stylesheet" type="text/css" href="public/css/style.css">
         <script src="public/script/script.js"></script>
-        
+
         <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
         <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
     </head>
@@ -15,8 +15,8 @@
                 <p id="login">Log in</p>
                 <form id="login_form">
                     <input name="Email" type="text" class="email" placeholder="Email">
-                    <input name="Password" type="text" class="password" placeholder="Password">
-                    <input name="Repeat_password" type="text" class="password" placeholder="Repeat password" style="display: none;">
+                    <input name="Password" type="password" class="password" placeholder="Password">
+                    <input name="Repeat_password" type="password" class="password" placeholder="Repeat password" style="display: none;">
                 </form>
                 <div id="login_buttons">
                     <button name="register" class="button">Register</button>
