added css transitions animations and changed styling

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -21,6 +21,7 @@
             <form id="search_container">
                 <input name="Artist name" type="text" id="search_bar_artist" placeholder="Artist name">
                 <input name="Song title" type="text" id="search_bar_song_title" placeholder="Song title">
+                <img src="public/img/search.svg" id="search_button" style="margin: 0 0 0 1%;"/>
             </form>
         </div>
 
