--- a/public/views/results.html
+++ b/public/views/results.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
 
-            <form id="search_container" style="margin-top: 0; display: none;">
+            <form class="search_container_results">
                 <input name="Artist name" type="text" id="search_bar_artist" placeholder="Artist name">
                 <input name="Song title" type="text" id="search_bar_song_title" placeholder="Song title">
             </form>
