--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,10 @@
 * {
     margin: 0;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
 }
 
 #base_container {
@@ -27,11 +32,16 @@ input {
     text-align: left;
     font: normal normal normal 28px/24px Roboto;
     letter-spacing: 0.26px;
+    background: #FFFFFF0A 0% 0% no-repeat padding-box;
     color: #FFFFFF99;
+    border: none;
+    border-bottom: 1px solid #FFFFFF0A;
 }
 
 input:focus-visible {
     outline: none;
+    background: #FFFFFF1F 0% 0% no-repeat padding-box;
+    border-bottom: 1px solid #BB86FC;
 }
 
 /*  -----------------------------------------    INDEX SCREEN   ---------------------------------   */
@@ -51,25 +61,18 @@ input:focus-visible {
 }
 
 #search_bar_artist {
-    background: #FFFFFF0A 0% 0% no-repeat padding-box;
     border-radius: 4px 4px 0px 0px;
-    /* line-height: 6.5em; */
     size: 5em;
     padding: 1em;
     width: 20%;
-    border: none;
-    border-bottom: 1px solid #FFFFFF0A;
     margin: 1%;
 }
 
 #search_bar_song_title {
-    background: #FFFFFF0A 0% 0% no-repeat padding-box;
     border-radius: 4px 4px 0px 0px;
     /* line-height: 6.5em; */
     padding: 1em;
     width: 40%;
-    border: none;
-    border-bottom: 1px solid #FFFFFF0A;
     margin: 1%;
 }
 
@@ -114,6 +117,9 @@ input:focus-visible {
     border: 1px solid #FFFFFF0A;
     margin: 2%;
 }
+.email:focus-visible {
+    border: 1px solid #BB86FC;
+}
 
 .password {
     background: #FFFFFF0A 0% 0% no-repeat padding-box;
@@ -125,6 +131,9 @@ input:focus-visible {
     background-position: 97% 50%;
     background-repeat: no-repeat;
     background-size: 8%;
+}
+.password:focus-visible {
+    border: 1px solid #BB86FC;
 }
 
 #login_buttons {
@@ -170,6 +179,24 @@ input:focus-visible {
 #search_button {
     float: right;
     margin: 2% 5% auto;
+}
+
+.search_container_results {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    height: 0;
+    overflow: hidden;
+    visibility: hidden;
+}
+
+.displayed {
+    visibility: visible;
+    height: auto;
+    opacity: 1;
 }
 
 #song_info {
