--- a/public/css/style.css
+++ b/public/css/style.css
@@ -126,22 +126,44 @@ input:focus-visible {
     border-radius: 4px 4px 0px 0px;
     padding: 0.5em;
     border: 1px solid #FFFFFF0A;
-    margin: 2%;
     background-image: url(../img/password.svg);
     background-position: 97% 50%;
     background-repeat: no-repeat;
     background-size: 8%;
+    visibility: hidden;
+    height: 0;
+    opacity: 0;
+    scale: 0;
 }
 .password:focus-visible {
     border: 1px solid #BB86FC;
 }
+.password_visible {
+    margin: 2%;
+    visibility: visible;
+    height: auto;
+    opacity: 1;
+    scale: 1;
+}
 
-#login_buttons {
+.login_buttons {
     display: flex;
     flex-direction: row;
     width: 45%;
-    margin: 2% 27.5% 6% 27.5%;
     justify-content: space-between;
+    visibility: hidden;
+    height: 0;
+    opacity: 0;
+    scale: 0;
+    transition: all 0.1s;
+}
+
+.display_buttons {
+    visibility: visible;
+    height: auto;
+    opacity: 1;
+    margin: 2% 27.5% 6% 27.5%;
+    scale: 1;
 }
 
 .button {
