--- a/public/views/login.html
+++ b/public/views/login.html
@@ -15,14 +15,14 @@
                 <p id="login">Log in</p>
                 <form id="login_form">
                     <input name="Email" type="text" class="email" placeholder="Email">
-                    <input name="Password" type="password" class="password" placeholder="Password">
+                    <input name="Password" type="password" class="password password_visible" placeholder="Password">
                     <input name="Repeat_password" type="password" class="password" placeholder="Repeat password" style="display: none;">
                 </form>
-                <div id="login_buttons">
+                <div class="login_buttons display_buttons">
                     <button name="register" class="button">Register</button>
                     <button name="login" class="button">Log in</button>
                 </div>
-                <div id="login_buttons" style="visibility:collapse;">
+                <div class="login_buttons">
                     <button name="login" class="button">Log in</button>
                     <button name="register" class="button">Register</button>
                 </div>
