--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,7 +20,7 @@
 #chorded {
     text-align: left;
     font-family: 'Roboto Light', sans-serif;
-    font: normal normal 300 96px/112px Roboto;
+    font: normal normal 300 5vw Roboto;
     letter-spacing: -1.44px;
     color: #FFFFFFDE;
     opacity: 0.5;
@@ -30,7 +30,7 @@
 
 input {
     text-align: left;
-    font: normal normal normal 28px/24px Roboto;
+    font: normal normal normal 1.5vw Roboto;
     letter-spacing: 0.26px;
     background: #FFFFFF0A 0% 0% no-repeat padding-box;
     color: #FFFFFF99;
@@ -49,6 +49,7 @@ input:focus-visible {
 #profile_button {
     float: right;
     margin: 2% 5% auto;
+    width: 3.8vw;
 }
 
 #search_container {
@@ -95,7 +96,7 @@ input:focus-visible {
 #login {
     text-align: center;
     font-family: 'Roboto Light', sans-serif;
-    font: normal normal 300 60px/72px Roboto;
+    font: normal normal 300 3vw Roboto;
     letter-spacing: -0.48px;
     color: #FFFFFFDE;
     margin: 6% 0 2% 0;
@@ -126,10 +127,10 @@ input:focus-visible {
     border-radius: 4px 4px 0px 0px;
     padding: 0.5em;
     border: 1px solid #FFFFFF0A;
-    background-image: url(../img/password.svg);
+    /* background-image: url(../img/password.svg);
     background-position: 97% 50%;
     background-repeat: no-repeat;
-    background-size: 8%;
+    background-size: 8%; */
     visibility: hidden;
     height: 0;
     opacity: 0;
@@ -177,7 +178,7 @@ input:focus-visible {
     text-align: center;
     padding: 0.6em 0 0.6em 0;
     width: 35%;
-    font: normal normal normal 30px/16px Calibri;
+    font: normal normal normal 1.3vw Calibri;
     letter-spacing: 1px;
     color: #000000;
 }
@@ -214,6 +215,7 @@ input:focus-visible {
 #search_button {
     float: right;
     margin: 2% 5% auto;
+    width: 3.8vw;
 }
 
 .search_container_results {
@@ -264,7 +266,7 @@ input:focus-visible {
 #song_title {
     text-align:left;
     font-family: 'Roboto Light', sans-serif;
-    font: normal normal 300 96px/112px Roboto;
+    font: normal normal 300 4.1vw Roboto;
     letter-spacing: -1.44px;
     color: #FFFFFFDE;
 }
@@ -272,7 +274,7 @@ input:focus-visible {
 #song_key {
     text-align: left;
     font-family: 'Roboto Light', sans-serif;
-    font: normal normal normal 34px/36px Roboto;
+    font: normal normal normal 2vw Roboto;
     letter-spacing: 0px;
     color: #FFFFFFDE;
 }
@@ -280,7 +282,7 @@ input:focus-visible {
 #song_tempo {
     text-align: left;
     font-family: 'Roboto Light', sans-serif;
-    font: normal normal normal 24px/24px Roboto;
+    font: normal normal normal 1.15vw Roboto;
     letter-spacing: 0.18px;
     color: #FFFFFFDE;
 }
@@ -308,7 +310,7 @@ input:focus-visible {
 
 .song_tag p {
     font-family: 'Roboto Light', sans-serif;
-    font: normal normal normal 20px/20px Roboto;
+    font: normal normal normal 1.2vw Roboto;
     letter-spacing: 0.36px;
     color: #BB86FCDE;
     line-height: 3em;
@@ -331,7 +333,7 @@ input:focus-visible {
 }
 
 .song_element {
-    font: normal normal normal 24px/24px Roboto;
+    font: normal normal normal 1.2vw Roboto;
     letter-spacing: 0.18px;
     color: #FFFFFFDE;
     text-align: left;
@@ -345,9 +347,156 @@ input:focus-visible {
 
 .song_chords p {
     text-align: left;
-    font: normal normal normal 48px/56px Roboto;
+    font: normal normal normal 2.5vw Roboto;
     letter-spacing: 0px;
     color: #FFFFFFDE;
     margin: 2%;
     opacity: 0.7;
+}
+
+
+
+@media only screen and (max-device-width: 500px) {
+    /* ======================= INDEX SCREEN =============================== */
+
+    #chorded {
+        font-family: 'Roboto Light', sans-serif;
+        font: normal normal 300 20vw Roboto;
+        margin-top: 15vh;
+    }
+
+    #profile_button {
+        width: 16vw;
+    }
+
+    #search_button {
+        width: 16vw;
+    }
+
+    #search_container {
+        flex-direction: column;
+        height: 65%;
+        justify-content: space-evenly;
+    }
+
+    #search_bar_artist {
+        width: 80%;
+    }
+
+    #search_bar_song_title {
+        width: 80%;
+    }
+
+    input {
+        text-align: left;
+        font: normal normal normal 5.5vw Roboto;
+        padding: 1em;
+    }
+
+    /* ========================== LOGIN SCREEN =========================== */
+
+    #login_container {
+        background: none;
+        border: 0px;
+        width: 100%;
+        height: 80%;
+        box-shadow: none;
+        text-align: center;
+        align-items: center;
+        margin: 0 auto;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+    }
+
+    #login {
+        font: normal normal 300 15vw Roboto;
+    }
+
+    #login_form {
+        width: 90%;
+    }
+
+    .email {
+        padding: 1em;
+    }
+    
+    .password {
+        padding: 1em;
+    }
+
+    .login_buttons {
+        width: 75%;
+    }
+
+    .button {
+        font: normal normal normal 6vw Calibri;
+    }
+
+    /* ===================== RESULTS SCREEN ==================== */
+
+    #song_info {
+        height: 20%;
+
+    }
+
+    #song_picture {
+        height: 60%;
+    }
+
+    #header #chorded {
+        font: normal normal 300 13vw Roboto;
+    }
+
+    #header #search_button {
+        width: 10vw;
+    }
+
+    #header #profile_button {
+        width: 10vw;
+    }
+
+    #song_info_details {
+        width: 52%;
+    }
+
+    #song_title {
+        font: normal normal 300 8vw Roboto;
+    }
+
+    #song_key {
+        font: normal normal 300 5.5vw Roboto;        
+    }
+
+    #song_tempo {
+        font: normal normal 300 3.5vw Roboto;        
+    }
+
+    #song_tags {
+        width: 18%;
+    }
+
+    .song_tag {
+        width: 90%;
+    }
+
+    .song_tag p {
+        font: normal normal normal 3vw Roboto;
+    }
+
+    #results_container {
+        width: 80%;
+    }
+
+    #results_item {
+        margin-top: 10%;
+    }
+
+    .song_element {
+        font: normal normal normal 4.5vw Roboto;
+    }
+
+    .song_chords p {
+        font: normal normal normal 6.5vw Roboto;
+    }
 }
